Remove a lot of redundant text-center classes

--- a/404.html
+++ b/404.html
@@ -5,6 +5,10 @@ permalink: /404.html
 
 <div class='row'>
   <div class='col-md-3'></div>
-  <div class='col-md-6' id='the-one'><a href="/"><h2 class="text-center">Get back on The One</h2></a></div>
+  <div class='col-md-6'>
+    <a href="/">
+      <h2>Get back on The One</h2>
+    </a>
+  </div>
   <div class='col-md-3'></div>
 </div>
