Better license message

--- a/merchandise.html
+++ b/merchandise.html
@@ -10,7 +10,7 @@ We don't currently have the capacity to sell our t-shirts. However, the good new
   First, download one of our logos
 </h2>
 <h3 class='subtitle'>
-  Logos are released under an <a href='https://creativecommons.org/licenses/by-nc-sa/4.0'>Attribution-NonCommercial-ShareAlike</a> license
+  Logos are released under a Creative Commons <a href='https://creativecommons.org/licenses/by-nc-sa/4.0'>Attribution-NonCommercial-ShareAlike</a> license
 </h3>
 
 <div class='row merch'>
