--- a/sounds.html
+++ b/sounds.html
@@ -12,16 +12,16 @@ license_version: 3.0
 </script>
 
 <div class='row'>
-  {% include sound-cell.html id = site.data.sounds.first.id width = 6 %}
+  {% include sound-cell.html id = site.data.sounds.first.id location = site.data.sounds.first.location date = site.data.sounds.first.date width = 6 %}
   <div class='col-md-6'>
     <div class='row'>
       {% for sound in site.data.sounds limit:2 offset:1 %}
-        {% include sound-cell.html id = sound.id width = 6 %}
+        {% include sound-cell.html id = sound.id location = sound.location date = sound.date width = 6 %}
       {% endfor %}
     </div>
     <div class='row'>
       {% for sound in site.data.sounds limit:2 offset:3 %}
-        {% include sound-cell.html id = sound.id width = 6 %}
+        {% include sound-cell.html id = sound.id location = sound.location date = sound.date width = 6 %}
       {% endfor %}
     </div>
   </div>
@@ -29,6 +29,6 @@ license_version: 3.0
 
 <div class='row'>
   {% for sound in site.data.sounds limit:4 offset:5 %}
-    {% include sound-cell.html id = sound.id width = 3 %}
+    {% include sound-cell.html id = sound.id location = sound.location date = sound.date width = 3 %}
   {% endfor %}
 </div>
