Semantic all around

--- a/merchandise.html
+++ b/merchandise.html
@@ -2,63 +2,66 @@
 title: Merchandise
 ---
 
-<p>
-We don't currently have the capacity to sell our t-shirts. However, the good new is, you can make your own!
-</p>
+<article class='merch'>
 
-<h2>
-  First, download one of our logos
-</h2>
-<h3 class='subtitle'>
-  Logos are released under a Creative Commons <a href='https://creativecommons.org/licenses/by-nc-sa/4.0'>Attribution-NonCommercial-ShareAlike</a> license
-</h3>
+  <p>
+  We don't currently have the capacity to sell our t-shirts. However, the good new is, you can make your own!
+  </p>
 
-<div class='row merch'>
-  <div class='col-md-1'></div>
-  <div class='col-md-7'>
-    <a href='http://rawfunkmaharishi.uk/assets/images/logos/wide/banner.png'>
-      <img src='http://rawfunkmaharishi.uk/assets/images/logos/wide/banner.png' alt='Wide Banner' />
-    </a>
+  <h1>
+    First, download one of our logos
+  </h1>
+  <h2 class='subtitle'>
+    Logos are released under a Creative Commons <a href='https://creativecommons.org/licenses/by-nc-sa/4.0'>Attribution-NonCommercial-ShareAlike</a> license
+  </h2>
+
+  <div class='row'>
+    <div class='col-md-1'></div>
+    <div class='col-md-7'>
+      <a href='http://rawfunkmaharishi.uk/assets/images/logos/wide/banner.png'>
+        <img src='http://rawfunkmaharishi.uk/assets/images/logos/wide/banner.png' alt='Wide Banner' />
+      </a>
+    </div>
+    <div class='col-md-3'>
+      <a href='http://rawfunkmaharishi.uk/assets/images/logos/stacked/logo.png'>
+        <img src='http://rawfunkmaharishi.uk/assets/images/logos/stacked/logo.png' alt='Wide Banner' />
+      </a>
+    </div>
+    <div class='col-md-1'></div>
   </div>
-  <div class='col-md-3'>
-    <a href='http://rawfunkmaharishi.uk/assets/images/logos/stacked/logo.png'>
-      <img src='http://rawfunkmaharishi.uk/assets/images/logos/stacked/logo.png' alt='Wide Banner' />
-    </a>
-  </div>
-  <div class='col-md-1'></div>
-</div>
 
-<p>
-Then
-</p>
+  <p>
+  Then
+  </p>
 
-<ul class='merch'>
-  <li>
-    Head over to <a href='http://www.streetshirts.co.uk/en-gb/creation'>Streetshirt</a>
-  </li>
-  <li>
-    Select 'Upload image' down the left-hand side
-  </li>
-  <li>
-    Agree to the terms and conditions
-  </li>
-  <li>
-    Select the logo you downloaded above
-  </li>
-  <li>
-    No, you don't want to vectorise your image
-  </li>
-  <li>
-    The image should now be there under 'Assets' on the right-hand side
-  </li>
-  <li>
-    Design some merch!
-  </li>
-</ul>
+  <ul>
+    <li>
+      Head over to <a href='http://www.streetshirts.co.uk/en-gb/creation'>Streetshirt</a>
+    </li>
+    <li>
+      Select 'Upload image' down the left-hand side
+    </li>
+    <li>
+      Agree to the terms and conditions
+    </li>
+    <li>
+      Select the logo you downloaded above
+    </li>
+    <li>
+      No, you don't want to vectorise your image
+    </li>
+    <li>
+      The image should now be there under 'Assets' on the right-hand side
+    </li>
+    <li>
+      Design some merch!
+    </li>
+  </ul>
 
-<p>
-  If you do create some merch of your own, <em>please</em> send us a photo of you wearing it
-</p>
-<p>
-  Also, please note that we are not affiliated with Streetshirt in any way, we've just been extremely impressed with their rapid delivery of high-quality t-shirts
-</p>
+  <p>
+    If you do create some merch of your own, <em>please</em> send us a photo of you wearing it
+  </p>
+  <p>
+    Also, please note that we are not affiliated with Streetshirt in any way, we've just been extremely impressed with their rapid delivery of high-quality t-shirts
+  </p>
+</article>
