--- a/feedback.html
+++ b/feedback.html
@@ -22,6 +22,8 @@ title: What people are saying about us
   <div class='col-md-3'></div>
 </div>
 
-<h4 class='call-for-feedback'>
-Please send us your feedback on <a href='https://twitter.com/uncookedfunk'>Twitter</a>, <a href='https://facebook.com/rawfunkmaharishi'>Facebook</a>, or via a <a href='https://github.com/rawfunkmaharishi/rawfunkmaharishi.github.io/blob/master/_data/reviews.yml'>Github pull-request</a>
-</h4>
+<section class='call-for-feedback'>
+  <h1>
+    Please send us your feedback on <a href='https://twitter.com/uncookedfunk'>Twitter</a>, <a href='https://facebook.com/rawfunkmaharishi'>Facebook</a>, or via a <a href='https://github.com/rawfunkmaharishi/rawfunkmaharishi.github.io/blob/master/_data/reviews.yml'>Github pull-request</a>
+  </h1>
+</section>
