--- a/licensing.html
+++ b/licensing.html
@@ -4,14 +4,14 @@ no_title: true
 ---
 <h1 class='main-title'>Open Content</h1>
 <p>
-  All creative works on this site, including <a href='/sounds'>audio</a>, <a href='/videos'>video</a>, <a href='/pictures'>photos</a>, <a href='/merchandise'>logos</a> and <a href='/blog'>blog posts</a> are <a href='https://creativecommons.org/licenses/'>Creative Commons</a>-licensed. See individual pages or items for specific licensing terms
+  All creative works on this site, including <a href='/sounds'>audio</a>, <a href='/videos'>video</a>, <a href='/pictures'>photos</a>, <a href='/merchandise'>logos</a> and <a href='/blog'>blog posts</a> are <a href='https://creativecommons.org/licenses/'>Creative Commons</a>-licensed. This means that you are free to reuse and remix them, subject to the restrictions outlined <a href='https://creativecommons.org/licenses/'>here</a>. See individual pages or items for specific licensing terms
 </p>
 
 <hr />
 
 <h1 class='main-title'>Open Source</h1>
 <p>
-  This site is built using the <a href='https://github.com/jekyll/jekyll/blob/master/LICENSE'>MIT-licensed</a> <a href='http://jekyllrb.com/'>Jekyll</a> framework, and styled with the help of the <a href='https://github.com/twbs/bootstrap/blob/master/LICENSE'>MIT-licensed</a> <a href='http://getbootstrap.com/'>Twitter Bootstrap</a>. The entire source is available (<a href='https://github.com/rawfunkmaharishi/rawfunkmaharishi.github.io/blob/master/LICENSE.md'>MIT-licensed</a>) on <a href='https://github.com/rawfunkmaharishi/rawfunkmaharishi.github.io'>Github</a>
+  This site is built using the <a href='http://jekyllrb.com/'>Jekyll</a> framework, and styled with the help of <a href='http://getbootstrap.com/'>Twitter Bootstrap</a>, both of which are <a href='http://opensource.org/licenses/MIT'>MIT-licensed</a>. The entire source is available on <a href='https://github.com/rawfunkmaharishi/rawfunkmaharishi.github.io'>Github</a>, also under the <a href='https://github.com/rawfunkmaharishi/rawfunkmaharishi.github.io/blob/master/LICENSE.md'>MIT license</a>
 </p>
 
 <hr />
