--- a/videos.html
+++ b/videos.html
@@ -3,7 +3,7 @@ title: Videos
 ---
 
 <div class='row'>
-  {% for video in site.data.videos %}
+  {% for video in site.data.vimeo %}
     <div class='col-md-6'>
       <section class='thumbnail vimeo'>
         <div class='embed-responsive embed-responsive-16by9'>
