--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@ no_title: true
 trim_class: plain
 with_nav: true
 ---
+<script language="javascript">
+  $(document).ready(function(){
+    $(window).scroll(function () {
+      set = $(document).scrollTop()+"px";
+      $('#floatDiv').animate({top:set},{duration:1000,queue:false});
+    });
+  });
+</script>
+
+
+
+<div id="floatDiv">
+  <div class="panel panel-default">
+    <div class="panel-body">
+      Upcoming gig: <a href='/gigs/'>20th March at New Cross Inn</a>
+    </div>
+  </div>
+</div>
 
 <img src='/assets/images/logos/wide/banner.png'
      alt='Raw Funk Maharish'
