--- a/index.html
+++ b/index.html
@@ -16,15 +16,18 @@ with_nav: true
   });
 </script>
 
-
-
+{% assign next_gig = site.categories.gigs.first %}
+{% capture gigseconds %}{{ next_gig.date | date: '%s' }}{% endcapture %}
+{% capture future %}{{ nowseconds | minus:gigseconds }}{% endcapture %}
+{% if future < '0' %}
 <div id="floatDiv">
   <div class="panel panel-default">
     <div class="panel-body">
-      Upcoming gig: <a href='/gigs/'>20th March at New Cross Inn</a>
+      Next gig: <a href='{{ next_gig.url }}'>{{ next_gig.date | date_to_long_string}} at {{ next_gig.title }}</a>
     </div>
   </div>
 </div>
+{% endif %}
 
 <img src='/assets/images/logos/wide/banner.png'
      alt='Raw Funk Maharish'
