--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ with_nav: true
 {% if future < '0' %}
   <div class="panel panel-info next-gig">
     <div class="panel-body">
-      <div class="expanding-circle"></div>
+      <div class="throbbing-gristle"></div>
       Next gig: <a href='{{ next_gig.url }}'>{{ next_gig.date | date: "%A %-d %B" }} at {{ next_gig.title }}</a>
     </div>
   </div>
