--- a/licensing.html
+++ b/licensing.html
@@ -22,16 +22,14 @@ no_title: true
 
 <section>
   <h1 class='main-title'>Open Data</h1>
-<!--  <div class='row'>
+  <div class='row'>
     <div class='col-md-3'>
       {% include open-data-certificate.html %}
     </div>
-    <div class='col-md-9'>-->
-
-
+    <div class='col-md-9'>
       <p>
       In addition, this site <a href='/blog/2015/01/19/linking-data/'>publishes data</a> about Raw Funk Maharishi <a href='/gigs'>gigs</a> as <a href='http://theodi.org/guides/what-open-data'>Open Data</a>. This data is made available under a <a href='http://creativecommons.org/licenses/by-sa/4.0/'>Creative Commons Attribution Share-alike license</a>
       </p>
-    <!--</div>
-  </div>-->
+    </div>
+  </div>
 </section>
