--- a/merchandise.html
+++ b/merchandise.html
@@ -24,7 +24,7 @@ title: Merchandise
     </div>
     <div class='col-md-3'>
       <a href='http://rawfunkmaharishi.uk/assets/images/logos/stacked/logo.png'>
-        <img src='http://rawfunkmaharishi.uk/assets/images/logos/stacked/logo.png' alt='Wide Banner' />
+        <img src='http://rawfunkmaharishi.uk/assets/images/logos/stacked/logo.png' alt='Stacked Banner' />
       </a>
     </div>
     <div class='col-md-1'></div>
