Strapline as data

--- a/index.html
+++ b/index.html
@@ -19,5 +19,5 @@ with_nav: true
      class='splash center-block visible-xs-inline-block visible-sm-inline-block'/>
 
 <p class='splash pull-right'>
-  Exploring the deep funk grooves of the 70s, fused with improvised avant-groove jams
+  {{ site.data.attributes.strapline }}
 </p>
