These should be independent, maybe

--- a/index.html
+++ b/index.html
@@ -19,5 +19,5 @@ with_nav: true
      class='splash center-block visible-xs-inline-block visible-sm-inline-block'/>
 
 <p class='splash pull-right'>
-  {{ site.data.attributes.strapline }}
+  {{ site.data.attributes.strapline.standard }}
 </p>
