--- a/qr.html
+++ b/qr.html
@@ -1,10 +1,11 @@
 ---
+title: QR Code
 ---
 
 <div class='row'>
-  <div class='col-md-3'></div>
-  <div class='col-md-6'>
-    <img src='http://rawfunkmaharishi.uk/assets/qrcode.png' alt='QR Code' />
+  <div class='col-md-12'>
+    <section class='thumbnail'>
+    <img src='/assets/qrcode.svg' alt='QR Code' />
+  </section>
   </div>
-  <div class='col-md-3'></div>
 </div>
