--- a/licensing.html
+++ b/licensing.html
@@ -23,7 +23,7 @@ no_title: true
 <section>
   <h1 class='main-title'>Open Maps</h1>
   <p>
-    This site uses maps from <a href='http://www.openstreetmap.org/'>OpenStreetMap</a>, licensed under the <a href='http://opendatacommons.org/licenses/odbl/'>Open Data Commons Open Database License</a> (ODbL) by the  <a href='http://osmfoundation.org/'>OpenStreetMap Foundation</a> (OSMF). The cartography in the map tiles is licensed under the <a href='http://creativecommons.org/licenses/by-sa/2.0/'>Creative Commons Attribution-ShareAlike 2.0</a> license (CC BY-SA)
+    This site uses maps from <a href='http://www.openstreetmap.org/copyright'>OpenStreetMap</a>, licensed under the <a href='http://opendatacommons.org/licenses/odbl/'>Open Data Commons Open Database License</a> (ODbL) by the  <a href='http://osmfoundation.org/'>OpenStreetMap Foundation</a> (OSMF). The cartography in the map tiles is licensed under the <a href='http://creativecommons.org/licenses/by-sa/2.0/'>Creative Commons Attribution-ShareAlike 2.0</a> license (CC BY-SA)
   </p>
 </section>
 
