--- a/sounds.html
+++ b/sounds.html
@@ -11,19 +11,19 @@ title: Sounds
 
 <div class='row'>
   {% for sound in site.data.soundcloud limit:2 %}
-  {% include sound-cell.html id = sound.id location = sound.location date = sound.date license = sound.license license_url = sound.license_url width = 6 %}
+  {% include sound-cell.html id = sound.id location = sound.location engineer = sound.engineer date = sound.date license = sound.license license_url = sound.license_url width = 6 %}
   {% endfor %}
 </div>
 
 <div class='row'>
   {% for sound in site.data.soundcloud limit:4 offset:2 %}
-    {% include sound-cell.html id = sound.id location = sound.location date = sound.date license = sound.license license_url = sound.license_url width = 3 %}
+    {% include sound-cell.html id = sound.id location = sound.location engineer = sound.engineer date = sound.date license = sound.license license_url = sound.license_url width = 3 %}
   {% endfor %}
 </div>
 
 
 <div class='row'>
   {% for sound in site.data.soundcloud limit:4 offset:6 %}
-    {% include sound-cell.html id = sound.id location = sound.location date = sound.date license = sound.license license_url = sound.license_url width = 3 %}
+    {% include sound-cell.html id = sound.id location = sound.location engineer = sound.engineer date = sound.date license = sound.license license_url = sound.license_url width = 3 %}
   {% endfor %}
 </div>
