--- a/gigs.html
+++ b/gigs.html
@@ -41,14 +41,26 @@ title: Gigs
         <h2>Archive</h2>
         <dl class='dl-horizontal past-gigs'>
 
+          {% assign year = site.data.attributes.current_year %}
+          <div id='gigs-{{ year }}'>
+            <h3>{{ year }}</h3>
           {% for post in site.categories.gigs %}
             {% capture datetime %}{{ post.date | date: '%Y-%m-%d' }}T{{ post.time }}{% endcapture %}
             {% capture postseconds %}{{ datetime | date: '%s' }}{% endcapture %}
             {% capture future %}{{ nowseconds | minus:postseconds }}{% endcapture %}
             {% if future > '0' %}
+              {% capture gigyear %}{{ post.date | date: '%Y' }}{% endcapture %}
+              {% assign gigyear = gigyear | plus: 0 %}
+              {% if gigyear < year %}
+                {% assign year = gigyear %}
+                </div>
+                <div id='gigs-{{ year }}'>
+                  <h3>{{ year }}</h3>
+              {% endif %}
               {% include gig.html date = post.date url = post.url title = post.title %}
             {% endif %}
           {% endfor %}
+        </div>
 
         </dl>
 
